# wallpaper-engine-media-extensions

./: CMakeLists.txt  LICENSE  readme.md
mediaextensions/: CMakeLists.txt
mediaextensions/include/: mp3soundstream.h  pch.h  wallpaperenginemediaextensions.h
mediaextensions/interface/: iwallpaperenginemediaextensions.h  mediaextensionspublic.h
mediaextensions/src/: dllmain.cpp  mp3soundstream.cpp  wallpaperenginemediaextensions.cpp
